--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="https://instagram.com/adk_saroz" target="_blank">
             <button id="insta-btn" type="submit">Instagram</button>
             </a>
-            <a href="https://www.facebook.com/beingsaroj.adk" target="_blank">
+            <a href="https://facebook.com/beingsaroj.adk" target="_blank">
             <button id="fb-btn">Facebook</button>
             </a>
             <a href="">
